--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,8 @@
     "mongoose": "^5.9.9"
   },
   "scripts": {
-    "start": "nodemon ./server.js"
+    "start": "node ./server.js",
+    "dev": "nodemon ./server.js"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
